# cellular-automaton

./: Cargo.toml  README.md
config/: rule110.json  rule110_coordinates.json  rule110_rules.json
config/game_of_life/: coordinates.json  coordinates_hwss.json  coordinates_pulsar.json  dimensions.json  rules.json  rules_explicit.json  rules_sum.json
config/rule110/: dimensions.json  rules.json
src/: lib.rs  main.rs
src/automaton/: automaton.rs  automaton_builder.rs  grid.rs  mod.rs  neighborhood.rs  rules.rs  rules_new.rs  space.rs
src/automaton/parsers/: schemas.rs
src/automaton/rules/: mod.rs  rules.rs
src/automaton/rules/parsers/: mod.rs  schemas.rs  types.rs
src/cli/: mod.rs
src/config/: rule110.json
src/utils/: coordinate_utils.rs  coordinates_counter.rs  coordinates_iterator.rs  mod.rs
