[package]
name = "cellular-automaton-prg"
version = "0.1.0"
authors = ["matan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive", "alloc"] }
serde_json = { version = "1.0.51", features = ["alloc"] }
exitfailure = "0.5.1"
ndarray = "0.13.0"
convert-base = "1.1.0"
failure = "0.1.7"
structopt = "0.2.18"
